tests/parser/fail/primitive-kw.som
"test:
fail: true
"

"`primitive` is illegal in keyword methods"
PrimitiveKw = (
  test: that primitive: is_illegal = (
    ^42
  )
)
